Moved framework classes to libs/serverless-core